--- a/composer.json
+++ b/composer.json
@@ -2,18 +2,25 @@
     "name": "ffm/headless-middleware",
     "description": "Basic middleware for a remote API call",
     "license": "MIT",
-    "authors": [],
+    "authors": [
+        {
+            "name": "Sander Mangel",
+            "email": "sander@sandermangel.nl"
+        }
+    ],
     "require": {
         "php": ">=7.0",
+        "vlucas/phpdotenv": "^2.4",
         "slim/slim": "^3.1",
-        "monolog/monolog": "^1.17",
+        "monolog/monolog": "^1.23",
         "cache/filesystem-adapter": "^0.4.0",
         "guzzlehttp/guzzle": "^6.2",
         "cache/array-adapter": "^0.5.0",
         "illuminate/database": "^5.4",
         "yadakhov/insert-on-duplicate-key": "^1.1",
         "symfony/console": "^3.3",
-        "league/oauth1-client": "^1.7"
+        "league/oauth1-client": "^1.7",
+        "robmorgan/phinx": "^0.9.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
@@ -22,8 +29,9 @@
         "phpmd/phpmd": "^2.6",
         "phpro/grumphp": "^0.11.5",
         "phpspec/phpspec": "^3.3",
-        "phpstan/phpstan": "^0.6.4",
-        "nikic/php-parser": "^3.0"
+        "nikic/php-parser": "^3.0",
+        "squizlabs/php_codesniffer": "^3.0",
+        "phpstan/phpstan": "^0.7.0"
     },
     "autoload": {
         "psr-4": {
@@ -39,5 +47,4 @@
         "start": "php -S 0.0.0.0:8080 -t public public/index.php",
         "test": "grumphp run"
 	}
-
 }
